<resources>
    <string name="app_name">Extra Mile </string>
    <string name="facebook_app_id">1710217792349098</string>
    <string name="fb_login_protocol_scheme">fb1710217792349098</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="signIn"><u><b>Sign In</b></u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="feedbacks_array">
        <item>I have been overcharged</item>
        <item>Incurred charges</item>
        <item>The service provider was rude</item>
        <item>The service provider was unprofessional</item>
        <item>Driver requested cash payment</item>
        <item>Others</item>
    </string-array>


    <!--Vehicle Make -->
    <string name="vehicle_make_prompt">Choose a country</string>
    <string-array name="vehicle_make_entries">
        <item>Toyota</item>
        <item>Volvo</item>
        <item>BMW</item>
        <item>Nissan</item>
        <item>Honda</item>
        <item>Mercedez</item>
        <item>Kia</item>
        <item>Mitsubishi</item>
    </string-array>


    <!--Vehicle Model -->
    <string name="vehicle_model_prompt">Choose a country</string>
    <string-array name="vehicle_model_entries">
        <item>Test Model 1</item>
        <item>Test Model 2</item>
        <item>Test Model 3</item>
        <item>Test Model 4</item>
        <item>Test Model 5</item>
    </string-array>


    <!--Vehicle Manufacture Year -->
    <string name="vehicle_manufacture_year_prompt">Choose a country</string>
    <string-array name="vehicle_manufacture_year_entries">
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
    </string-array>

    <!--Vehicle Tyre Size -->
    <string name="vehicle_tyre_size_prompt">Choose a country</string>
    <string-array name="vehicle_tyre_size_entries">
        <item>205/40R15</item>
        <item>205/40R16</item>
        <item>205/40R17</item>
        <item>205/40R18</item>
        <item>205/40R19</item>
        <item>205/40R20</item>
        <item>205/40R21</item>
        <item>205/40R22</item>
    </string-array>


    <string name="vehicle_insurance_prompt">Choose a Insurance</string>



</resources>
