<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:text="Fill in your details"
            android:textStyle="bold"
            android:textColor="#000"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="Name"
                android:inputType="textPersonName"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/etUserEmail"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="Email"
                android:inputType="textPersonName"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/etUserPassword"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/etUserConfirmPassword"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/etCountryCode"
                    android:layout_width="149dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:hint="Country Code"
                    android:inputType="number"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="149dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:hint="Phone Number"
                    android:inputType="number|phone"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:textSize="14dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etVehicleNumber"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="Vehicle Number"
                android:inputType="textPersonName"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp" />

            <Spinner
                android:id="@+id/spnVehicleMake"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp"
                android:prompt="@string/vehicle_make_prompt"/>

            <Spinner
                android:id="@+id/spnVehicleModel"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp"
                android:prompt="@string/vehicle_model_prompt"/>

            <Spinner
                android:id="@+id/spnYearOfManufacture"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp"
                android:prompt="@string/vehicle_manufacture_year_prompt"/>

            <Spinner
                android:id="@+id/spnTyreSize"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp"
                android:prompt="@string/vehicle_tyre_size_prompt"/>

            <Spinner
                android:id="@+id/spnInsurance"
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:textSize="14dp"
                android:prompt="@string/vehicle_insurance_prompt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="By registering, I have read and agreed to"
                    android:textColor="#000"
                    android:textSize="12dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Terms of Use "
                        android:textColor="#6E8F00"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="and the "
                        android:textColor="#000"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/tvPrivacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Privacy Policy"
                        android:textColor="#6E8F00"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="322dp"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="#6E8F00"
                android:text="Next"
                android:textColor="#fff"
                android:textSize="14dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>